--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -6,8 +6,9 @@
 	</head>
 	<body>
 		<h1>Videogames</h1>
-		<a href="/catalog/genre">Genres</a>
-		<a href="/catalog/publisher">Publishers</a>
+		<a href="/genre">Genres</a>
+		<a href="/publisher">Publishers</a>
+		<a href="/catalog/game/create">New videogame</a>
 		<% for (let i = 0; i < allVideogames.length; i++) { %>
 		<h2><a href="<%= allVideogames[i].url %>"><%= allVideogames[i].title %></a></h2>
 		<% } %>
