--- a/views/publisherDetail.ejs
+++ b/views/publisherDetail.ejs
@@ -20,6 +20,7 @@
 		</div>
 		<p><%= videogames[index].description %></p>
 		<% } %>
+		<a href="<%=publisher.url%>/delete">Delete publisher</a>
 		<a href="/catalog/genre">Genres</a>
 		<a href="/catalog/publisher">Publishers</a>
 	</body>
