--- a/views/publisherCreate.ejs
+++ b/views/publisherCreate.ejs
@@ -5,9 +5,14 @@
 		<link rel="stylesheet" href="/stylesheets/style.css" />
 	</head>
 	<body>
+		<header>
+			<nav class="navbar">
+				<a href="/catalog">Catalog</a>
+				<a href="/genre">Genres</a>
+				<a href="/publisher">Publishers</a>
+			</nav>
+		</header>
 		<h2>Create a publisher</h2>
-		<a href="/genre">Genres</a>
-		<a href="/publisher">Publishers</a>
 		<a href="/publisher/create">Create publisher</a>
 		<form action="/publisher/create" method="post" class="videogame-create">
 			<label for="name">*Name</label>
