--- a/views/videogamePage.ejs
+++ b/views/videogamePage.ejs
@@ -5,13 +5,19 @@
 		<link rel="stylesheet" href="/stylesheets/style.css" />
 	</head>
 	<body>
+		<header>
+			<nav class="navbar">
+				<a href="/catalog">Catalog</a>
+				<a href="/genre">Genres</a>
+				<a href="/publisher">Publishers</a>
+			</nav>
+		</header>
 		<h2 class="gamepage-title"><%= videogame.title %></h2>
 		<div class="gamepage__top-container">
 			<p class="gamepage-price"><%= videogame.price %>$</p>
 			<p><%= videogame.formatted_release_date %></p>
 		</div>
 		<p><%= videogame.description %></p>
-		<a href="/catalog/genre">Genres</a>
-		<a href="/catalog/publisher">Publishers</a>
+		<a href="<%= videogame.url %>/delete">Delete videogame</a>
 	</body>
 </html>
