--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,18 @@ a {
 	color: #00b7ff;
 }
 
+header {
+	display: flex;
+	justify-content: center;
+}
+
+.navbar {
+	display: flex;
+	gap: 1.5rem;
+	font-size: 1.5rem;
+	margin-bottom: 1rem;
+}
+
 .gamepage-title {
 	font-size: 4rem;
 }
