--- a/views/publisher.ejs
+++ b/views/publisher.ejs
@@ -5,9 +5,14 @@
 		<link rel="stylesheet" href="/stylesheets/style.css" />
 	</head>
 	<body>
+		<header>
+			<nav class="navbar">
+				<a href="/catalog">Catalog</a>
+				<a href="/genre">Genres</a>
+				<a href="/publisher">Publishers</a>
+			</nav>
+		</header>
 		<h1>Publishers</h1>
-		<a href="/catalog">Catalog</a>
-		<a href="/genre">Genres</a>
 		<a href="/publisher/create">Create new publisher</a>
 		<% for (let i = 0; i < publishers.length; i++) { %>
 		<h2><a href="<%= publishers[i].url %>"><%= publishers[i].name %></a></h2>
