--- a/views/genreDetail.ejs
+++ b/views/genreDetail.ejs
@@ -17,6 +17,7 @@
 			<p class="gamepage-price"><%= gameCount %> <%= genre.name %> games</p>
 		</div>
 		<p><%= genre.description %></p>
+		<a href="<%= genre.url %>/delete">Delete genre</a>
 		<% for( let index = 0; index < videogames.length; index++ ) { %>
 		<div class="game-card">
 			<h2 class="gamepage-title"><%= videogames[index].title %></h2>
