--- a/views/videogame_detail.ejs
+++ b/views/videogame_detail.ejs
@@ -19,5 +19,6 @@
 		</div>
 		<p><%= videogame.description %></p>
 		<a href="<%= videogame.url %>/delete">Delete videogame</a>
+		<a href="<%= videogame.url %>/update">Update videogame</a>
 	</body>
 </html>
